<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary"
        app:tabIndicator="@android:color/black"
        app:tabIndicatorHeight="2dp">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/historicalplacestab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/historicalplacestab" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/shoppingtab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoppingtab" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/hotelstab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hotelstab" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/foodtab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foodtab" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>