<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Summary">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/summary"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/snametv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="left"
        android:paddingLeft="20dp"
        android:text="@string/food1name"
        android:textSize="22sp"
        android:textStyle="italic" />

    <ImageView
        android:id="@+id/simageiv"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:scaleType="centerCrop"
        android:src="@drawable/butter_chicken" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:padding="5dp"
        android:text="@string/food1sum"
        android:textStyle="normal" />

</LinearLayout>